<resources>
    <string name="app_name">Makwage</string>
    <string name="please_enter">Please enter</string>
    <string name="please_select">Please select</string>
    <string name="check_internet_availability">Unable to Connect to the Internet. Please Check Internet Connectivity</string>
    <string name="exit_from_app_message">Press again to close laundry</string>
    <string name="select_theme_code">Select Theme Mode</string>
    <string name="dark_mode_default_theme">Dark Mode (Default Theme)</string>
    <string name="light_mode">Light Mode</string>
    <string name="english">English</string>
    <string name="arabic">اَلْعَرَبِيَّةُ‎</string>
    <string name="select_language">Select Language</string>
    <string name="proceed">Proceed</string>
    <string name="register">Register</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="country">Country</string>
    <string name="password">Password</string>
    <string name="accept_terms_conditions"><![CDATA[Accept Terms & Conditions]]></string>
    <string name="already_have_an_account">Already have an account? Login</string>
    <string name="password_instruction">Password must contain at least 1 Alphabet, 1 Number and 1 Special Character</string>
    <string name="city">City</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="otp_send_message">OTP has been sent to you on your mobile number. Please enter it below</string>
    <string name="don_t_receive_the_otp">Don\'t receive the OTP?</string>
    <string name="don_t_receive_the_otp_resend_otp">Don\'t receive the OTP? Resend OTP</string>
    <string name="verify">Verify</string>
    <string name="profile_create">Profile Creation</string>
    <string name="name">Name</string>
    <string name="house_number">House Number</string>
    <string name="building_tower">Building/Tower</string>
    <string name="street_locality">Society/Locality</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="continue1">Continue</string>
    <string name="sign_up_not_done">Don’t have an account? SIGN UP</string>
    <string name="forgot_password_no_q_mark">Forgot Password</string>
    <string name="please_enter_mobile_number">Please enter the Mobile Number</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="submit">Submit</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_password_message">Enter Following details to reset your password</string>
    <string name="new_password">New Password</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="home_message">Work Under Progress</string>

    <!--Error-->
    <string name="your_feedback">Please enter your feedback</string>
    <string name="error_otp">Please enter Otp</string>
    <string name="Otp_resend_successfully">OTP resent successfully</string>
    <string name="error_name">Please enter user Name</string>
    <string name="error_email">Please enter Email</string>
    <string name="error_mobile_number">Please enter mobile Number</string>
    <string name="error_invalid_mobile_number">Please enter valid mobile number</string>
    <string name="error_invalid_email">Please enter valid email id</string>
    <string name="error_password">Please enter password</string>
    <string name="error_location">Please enter your location</string>
    <string name="error_house_no">Please enter your house number</string>
    <string name="error_landmark">Please enter landmark</string>
    <string name="error_new_password">Please enter new password</string>
    <string name="error_invalid_password"> Password should be at least 8 characters long</string>
    <string name="error_confirm_password">Please  confirm the password</string>
    <string name="error_password_match">Confirm password does not match</string>
    <string name="error_reset_password_match">New password and confirm password does not match</string>
    <string name="error_valid_mobile">Please enter valid mobile number</string>
    <string name="error_signup_password_match">Password and confirm password does not match</string>
    <!--Error Messages-->
    <string name="error_internet">Please check your internet connection</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string-array name="country_name">
        <item> Country</item>

        <item> Saudi Arabia</item>

    </string-array>
    <string-array name="city_name">
        <item> City</item>
        <item> Riyadh</item>
        <item> Jeddah</item>
        <item> Makkah</item>
        <item>Madina</item>
        <item> Dammam</item>
        <item>Dhahran</item>
        <item>AlKhobar</item>
    </string-array>
    <string name="title_activity_dashboard">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_order">Order</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_profile">Profile</string>

    <string name="title_setting">Setting</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_account">My Account</string>
    <string name="my_account_opt">Address, Payment Method</string>
    <string name="address">Address</string>
    <string name="payment_method">Payment Method</string>

    <string name="help">Help</string>
    <string name="help_opt">About Us, FAQ, T &amp; C, Blog, Cancellation Policy</string>
    <string name="faq">FAQ</string>
    <string name="aboutus">About Us</string>
    <string name="term_and_condition">Payment Method</string>
    <string name="blog">Blog</string>
    <string name="cancellation_policy">Cancellation Policy</string>
    <string name="update_profile">Update Profile</string>
    <string name="refer_a_friend">Refer a Friend</string>
    <string name="support">Support</string>
    <string name="others">Others</string>

</resources>