<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.SelectThemeModeActivity">

    <include
        layout="@layout/logo_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_forgot_password"
            style="@style/RippleEffectWithoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/select_theme_code"
            android:textColor="@color/colorMain"
            android:textSize="@dimen/_20sdp" />

        <RadioGroup
            android:id="@+id/rg_theme_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rb_english"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16sdp"
                android:button="@drawable/language_selector"
                android:fontFamily="@font/roboto_regular"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:text="@string/dark_mode_default_theme"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_15sdp" />

            <RadioButton
                android:id="@+id/rb_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:button="@drawable/language_selector"
                android:checked="true"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/light_mode"
                android:paddingStart="@dimen/_16sdp"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_15sdp" />
        </RadioGroup>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp">

            <include
                android:id="@+id/inc_btn_theme"
                layout="@layout/button_layout" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>